--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇭🇰 香港-6.82MB/s(Youtube:不良林), server: imgU140111366548.hk.huawei-cacahe.com, port: 20224, type: vmess, uuid: d8860258-4ce1-4412-9ede-ecfd8d827ca4, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: imgU140111366548.hk.huawei-cacahe.com}}
+  - {name: 🇨🇳 中国-9.67MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-10.10MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-453.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-571.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-334.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-322.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.74MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇸🇬 新加坡-2.43MB/s(Youtube:不良林), server: n25.emovpn.xyz, port: 1246, type: ss, cipher: chacha20-ietf-poly1305, password: 177fb4f9-f416-45e9-bd1f-4c28307be367}
+  - {name: 塞浦路斯-2.13MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 伊朗-537.5KB/s(Youtube:不良林), server: nnv.chitacdn.xyz, port: 54242, type: vmess, uuid: f2393d82-94c4-4b12-8267-293a7500e487, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-407.5KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-374.9KB/s(Youtube:不良林), server: 194.124.35.42, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-909.1KB/s(Youtube:不良林), server: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 444, type: vmess, uuid: ea43d5df-84ec-3a33-b625-6c08ff6ece57, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
+  - {name: 🇺🇸 美国-3.93MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 伊朗-537.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 伊朗-537.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,20 +53,19 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 伊朗-537.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-6.82MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -74,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 伊朗-537.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 伊朗-537.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 伊朗-537.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 伊朗-537.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
