--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.67MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-2.43MB/s(Youtube:不良林), server: n25.emovpn.xyz, port: 1246, type: ss, cipher: chacha20-ietf-poly1305, password: 177fb4f9-f416-45e9-bd1f-4c28307be367}
-  - {name: 塞浦路斯-2.13MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 伊朗-537.5KB/s(Youtube:不良林), server: nnv.chitacdn.xyz, port: 54242, type: vmess, uuid: f2393d82-94c4-4b12-8267-293a7500e487, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-407.5KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-374.9KB/s(Youtube:不良林), server: 194.124.35.42, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-909.1KB/s(Youtube:不良林), server: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 444, type: vmess, uuid: ea43d5df-84ec-3a33-b625-6c08ff6ece57, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
-  - {name: 🇺🇸 美国-3.93MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇨🇳 中国-10.44MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-5.14MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-342.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-521.2KB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-2.28MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇭🇰 香港-308.0KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇯🇵 日本-910.7KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.20MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
-      - 塞浦路斯-2.13MB/s(Youtube:不良林)
-      - 伊朗-537.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
-      - 塞浦路斯-2.13MB/s(Youtube:不良林)
-      - 伊朗-537.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
-      - 塞浦路斯-2.13MB/s(Youtube:不良林)
-      - 伊朗-537.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
-      - 塞浦路斯-2.13MB/s(Youtube:不良林)
-      - 伊朗-537.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
-      - 塞浦路斯-2.13MB/s(Youtube:不良林)
-      - 伊朗-537.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
-      - 塞浦路斯-2.13MB/s(Youtube:不良林)
-      - 伊朗-537.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.43MB/s(Youtube:不良林)
-      - 塞浦路斯-2.13MB/s(Youtube:不良林)
-      - 伊朗-537.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-407.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-374.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
